style.css
/* Colors

Dark blue = #000651
Pink = #DA008A
Purple = #953FFD

*/

/* GENERAL -------------------------------------------------------------- */

.hide {
  display: none;
}

body {
  padding: 0;
  margin: 0;
  background: #fff;
  color: #222;
  box-sizing: border-box;
  font-size: 16px;
  font-family: "Montserrat", sans-serif;
  line-height: 1.3;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a {
  padding: 0.3em 0;
  margin: 0;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.8em;
}

h3 {
  font-size: 1.6em;
}

h4 {
  font-size: 1.4em;
}

h5 {
  font-size: 1.2em;
}

h6 {
  font-size: 1.1em;
}

p {
  font-size: 1em;
}

a {
  font-size: 1em;
}

hr {
  background-color: #da008a;
  height: 8px;
  border: none;
  width: 3em;
  display: block;
  margin-left: 0;
}

.font-regular {
  font-weight: 500;
}

.font-bold {
  font-weight: 700;
}

.font-black {
  font-weight: 900;
}

.button {
  padding: 0.8em 2em;
  font-size: 1.1em;
  font-weight: 700;
  text-decoration: none;
  border-radius: 100px;
}

.button-solid {
  background: #da008a;
  color: #fff;
}

.button-white {
  color: #fff;
  border: solid 2px #fff;
  font-size: 16px;
}

.submit {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  cursor: pointer;
  font-family: inherit;
}

.button-clear {
  border: solid 5px #da008a;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.content {
  padding: 0 0.8em;
}

.white {
  color: #fff;
}

.pink {
  color: #da008a;
}

.purple {
  color: #953ffd;
}

.dark-blue {
  color: #000651;
}

/* DISCLAIMER ------------------------------------------------ */

.disclaimer {
  background: #000651;
  margin: 0;
  padding: 0.7em 0;
}

#exit-disclaimer {
  cursor: pointer;
}
.disclaimer > .content {
  display: flex;
}

.disclaimer > .content > p {
  font-size: 0.7em;
  opacity: 0.7;
  width: 95%;
}

.disclaimer > .content > p > a {
  color: #fff;
}

.disclaimer > .content > img {
  top: 0;
  right: 0.5em;
  width: 1em;
  cursor: pointer;
  opacity: 0.9;
}

/* HERO ------------------------------------------------ */

.hero {
  background: url("img/hero-bg.svg");
  background-repeat: no-repeat;
  background-size: auto;
  background-position: top;
  padding-bottom: 6.6em;
}

.hero > .content > nav > ul {
  margin: 0;
  padding: 0.3em 0 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  width: 120px;
}

.mobile-menu {
  top: 0;
}

.intro {
  margin-top: 40%;
}

.intro > .intro-top {
  width: 50%;
}

.intro > h2 {
  font-size: 1em;
  color: #444;
}

.intro > .intro-bottom {
  margin: 0 0 1.5em;
}

.intro > h1 {
  margin: 0;
  padding: 0;
}

/* AMOUNT ------------------------------------------ */

.amount {
  background: url("img/background.svg");
  background-repeat: no-repeat;
  background-size: cover;
  padding: 5em 0;
}

.form {
  padding: 1em 0 3em;
}

.input-number {
  margin: 1em 0;
  display: block;
  padding: 0.5em 0 0.5em 1.2em;
  font-size: 1.2em;
  width: calc(100% - 1.2em);
  border: none;
}

.position-gbp {
  position: relative;
  width: 100%;
}

.gbp {
  position: absolute;
  color: #222;
  top: 0.4em;
  left: 0.5em;
  font-size: 1.2em;
}

.range {
  display: inline-block;
  width: 100%;
  margin: 0 0 1em;
  -webkit-appearance: none;
  background: transparent;
  height: 50px;
}

.range::-ms-track {
  width: 100%;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}

.range::-webkit-slider-thumb, .range::-webkit-media-slider-thumb {
  -webkit-appearance: none;
  height: 2em;
  width: 2em;
  border-radius: 100%;
  background: #da008a;
  cursor: pointer;
  /* margin-top: -10px; */
}

.range::-moz-range-thumb {
  height: 2em;
  width: 2em;
  border-radius: 100%;
  background: #da008a;
  cursor: pointer;
  margin-top: -10px;
}

.range::-ms-thumb {
  height: 2em;
  width: 2em;
  border-radius: 100%;
  background: #da008a;
  cursor: pointer;
  margin-top: -10px;
}

.range::-webkit-slider-runnable-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  background: #fff;
  border-radius: 10px;
}

.range:focus::-webkit-slider-runnable-track {
  background: #fff;
}

.range::-moz-range-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  background: #fff;
  border-radius: 10px;
}

.range::-ms-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  background: #fff;
  border-radius: 10px;
  border: none;
}
.range::-ms-fill-lower {
  background: #fff;
  border-radius: 10px;
}
.range:focus::-ms-fill-lower {
  background: #fff;
}
.range::-ms-fill-upper {
  background: #fff;
  border-radius: 10px;
}
.range:focus::-ms-fill-upper {
  background: #fff;
}

.representative > p,
.representative > ul {
  opacity: 0.8;
  font-size: 0.9em;
}

.representative > ul > li {
  padding: 0.5em 0;
}

/* BENEFITS ------------------------------------------*/

.benefits {
  padding: 5em 0;
}

.benefit-item > img {
  width: 2.8em;
}

.benefit-item > h4 {
  padding: 0;
  margin: 0.5em 0 0;
}

.benefits > .content > ul > li {
  margin: 3em 0;
}

.benefits > .content > ul > li:nth-child(1) {
  margin: 0;
}

.benefits > .content > ul > li:nth-child(3) {
  margin: 0;
}

/* Poor credit ------------------------------------- */

.poor-credit {
  padding: 5em 0 6em;
  background: #eee;
}

.flex-left > p {
  margin: 0 0 1.5em;
}

.checklist > li {
  display: flex;
  align-items: baseline;
}

.checklist > li > img {
  margin: 0 0.5em 0 0;
  transform: translateY(0.1em);
}
.checklist > li > h5 {
  padding: 0 0 1em;
}

.checklist > li:nth-last-child(1) {
  margin: 0 0 2em;
}

/* FAQS ACC -------------------------------- */

.faqs {
  background: linear-gradient(to bottom right, #000651, #4f2aa1);
  padding: 5em 0;
}

.accordion {
  font-size: 1em;
  width: 100%;
  margin: 0 auto;
  color: #fff;
}

.accordion-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s;
  border-bottom: solid 2px grey;
  padding: 1.5em 0;
}

.accordion-header > h6 {
  width: 90%;
}

@keyframes appear {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.accordion-body {
  padding: 1.5em 1.5em;
  animation: appear 2s;
}

.accordion-header:after {
  content: "+";
  float: right;
  position: relative;
  transition: 1s;
}

.accordion-header.active:after {
  transform: rotate(135deg);
}

/* Footer ------------------------------------ */

footer {
  background: #222;
  padding: 2em 0;
}

.footer-logo {
  width: 50%;
  padding: 0 0 2em;
}

.footer-sub-menu {
  margin: 0 0 2em;
}

/* MEDIA QUERIES ------------------------- */

@media only screen and (min-width: 430px) {
  body {
    font-size: 20px;
  }

  .content {
    padding: 0 1.2em;
  }
}

@media only screen and (min-width: 600px) {
  body {
    font-size: 22px;
  }
}

@media only screen and (min-width: 800px) {
  .content {
    padding: 0 1.5em;
  }

  .range {
    width: 80%;
  }

  .input-number {
    width: calc(80% - 1.2em);
  }
}

@media only screen and (min-width: 900px) {
  .intro {
    margin-top: 30%;
  }
}

@media only screen and (min-width: 1024px) {
  body {
    font-size: 20px;
  }
  .content {
    padding: 0;
    width: 85%;
    margin: 0 auto;
  }

  .mobile-menu {
    display: none;
  }

  .desktop-menu {
    display: flex;
    font-size: 16px;
  }

  .desktop-menu > li {
    margin: 0 0 0 2em;
  }

  .desktop-menu > li > a {
    text-decoration: none;
  }

  nav {
    padding: 0.5em 0 0;
  }

  .logo {
    display: none;
  }

  .logo-oppo {
    display: block;
    width: 200px;
  }
  .hero {
    background: url("img/hero-bg-alt.svg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
    padding-bottom: 6.6em;
    font-size: 26px;
  }

  .intro {
    margin-top: 12%;
  }

  .flex-form {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 1em;
  }

  .range {
    width: 40vw;
  }

  .input-number {
    width: 40vw;
  }

  .benefits > .content > ul {
    display: flex;
    align-items: baseline;
  }

  .benefits > .content > ul > li {
    width: 33%;
    margin: 0;
  }

  .benefit-item {
    padding: 0 1.5em;
  }

  .poor-credit > .content {
    display: flex;
  }

  .flex-left {
    width: 50%;
    padding-right: 2em;
  }

  .flex-left > a {
    display: inline-block;
  }

  .flex-right > a {
    display: none;
  }

  .flex-left > h2 {
    padding-top: 0;
  }

  .flex-right {
    width: 50%;
    padding-left: 2em;
  }
}

@media only screen and (min-width: 1200px) {

  h1 {
    font-size: 2.4em;
  }
  .content {
    width: 80%;
  }

  .range {
    width: 35vw;
  }

  .input-number {
    width: 35vw;
  }
}

